add pages: agenda, cursos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,17 +24,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto me-auto">
-                        <a class="nav-item nav-link" href="#">Home</a>
-                        <a class="nav-item nav-link" href="#">Suporte</a>
-                        <a class="nav-item nav-link" href="#">Sobre nos</a>
-                        <a class="nav-item nav-link" href="#">Cursos</a>
-                        <a class="nav-item nav-link" href="#">Contato</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Home</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Suporte</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Sobre nos</a>
+                        <a class="nav-item nav-link fw-bold" href="./cursos/">Cursos</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Contato</a>
                     </div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="ms-auto">
-                        <a href="./login.html" class="btn button-transparent">login</a>
-                        <a href="./cadastro.html" class="btn button-black">cadastro</a>
+                        <a href="./login/" class="btn button-transparent fw-bold">login</a>
+                        <a href="./cadastro/" class="btn button-black fw-bold">cadastro</a>
                     </div>
                 </div>
             </div>
@@ -48,9 +48,9 @@
                 <div class="row">
                     <div class="col-lg-6 col-sm-12 d-flex align-items-center">
                         <div>
-                            <h1 class="mb-4"><span class="orange">Escolha seu modo de vida</span><br>é seu crescimento</h1>
+                            <h1 class="mb-4"><span class="text-orange">Escolha seu modo de vida</span><br>é seu crescimento</h1>
                             <p>"Oferecemos cursos gratuitos e dicas para ajudá-lo a se controlar enquanto joga jogos eletrônicos. Aprenda a reconhecer os sinais de perda de controle e descubra estratégias eficazes para manter o equilíbrio e jogar com segurança. Nossos cursos fornecem informações valiosas sobre os efeitos dos jogos eletrônicos na saúde mental e como prevenir o vício."</p>
-                            <button class="btn button-orange">Agenda</button>
+                            <a href="./agenda/" class="btn button-orange">Agenda</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-sm-12">
