--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select</title>
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
@@ -21,7 +21,7 @@
                             <div class="col-lg-6 col-sm-12 d-flex align-items-center">
                                 <div class="w-100 p-5">
                                     <div>
-                                        <a href="./index.html" class="text-decoration-none return"><i class="bi bi-chevron-left"></i> Voltar</a>
+                                        <a href="../index.html" class="text-decoration-none return"><i class="bi bi-chevron-left"></i> Voltar</a>
                                     </div>
                                     <div class="d-flex justify-content-center mb-5">
                                         <h1 class="title">Login</h1>
