add pages: agenda, cursos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- CABEÇALHO -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <div id="logo" class="d-flex align-items-center">
@@ -50,7 +50,7 @@
                         <div>
                             <h1 class="mb-4"><span class="text-orange">Escolha seu modo de vida</span><br>é seu crescimento</h1>
                             <p>"Oferecemos cursos gratuitos e dicas para ajudá-lo a se controlar enquanto joga jogos eletrônicos. Aprenda a reconhecer os sinais de perda de controle e descubra estratégias eficazes para manter o equilíbrio e jogar com segurança. Nossos cursos fornecem informações valiosas sobre os efeitos dos jogos eletrônicos na saúde mental e como prevenir o vício."</p>
-                            <a href="./agenda/" class="btn button-orange">Agenda</a>
+                            <a href="./agenda/" class="btn button-orange fw-bold">Agenda</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-sm-12">
@@ -118,7 +118,7 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="col-lg-4 col-sm-12">
-                            <div class="bg-light p-4">
+                            <div class="bg-white p-4">
                                 <div class="card-content">
                                     <img class="w-100" src="./assets/img/miguel.jpeg" alt="">
                                     <div class="mb-4">
@@ -127,11 +127,11 @@
                                     </div>
                                     <p>Sou Psicólogo Clínico Terapeuta Cognitivo Comportamental. Eu o auxiliarei a ressignificar suas crenças nucleares disfuncionais e a desenvolver cognições adaptativas acerca de si próprio.</p>
                                 </div>
-                                <button class="btn button-black-outline">Ver mais</button>
+                                <a href="./agenda/miguel-paduan-antonio/" class="btn button-black-outline fw-bold">Ver mais</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-12">
-                            <div class="bg-light p-4">
+                            <div class="bg-white p-4">
                                 <div class="card-content">
                                     <img class="w-100" src="./assets/img/julia.jpeg" alt="">
                                     <div class="mb-4">
@@ -140,11 +140,11 @@
                                     </div>
                                     <p>Olá! Sou a psicóloga Julia Oliveira Santos e estou aqui para oferecer meu suporte emocional e ajuda psicológica online. Com vasta experiência na área, estou comprometida em fornecer</p>
                                 </div>
-                                <button class="btn button-black-outline">Ver mais</button>
+                                <a href="./agenda/julia-oliveira-santos/" class="btn button-black-outline fw-bold">Ver mais</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-12">
-                            <div class="bg-light p-4">
+                            <div class="bg-white p-4">
                                 <div class="card-content">
                                     <img class="w-100" src="./assets/img/antonio.jpeg" alt="">
                                     <div class="mb-4">
@@ -153,7 +153,7 @@
                                     </div>
                                     <p>Minha abordagem terapêutica é baseada em uma visão integrativa, combinando diferentes técnicas e teorias da psicologia, adaptadas às necessidades individuais de cada cliente.</p>
                                 </div>
-                                <button class="btn button-black-outline">Ver mais</button>
+                                <a href="./agenda/antonio-jose-bezerra/" class="btn button-black-outline fw-bold">Ver mais</a>
                             </div>
                         </div>
                     </div>
