--- a/frontend/agenda/antonio-jose-bezerra/index.html
+++ b/frontend/agenda/antonio-jose-bezerra/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <!-- CABEÇALHO -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="../index.html">
+                <a class="navbar-brand" href="#">
                     <div id="logo" class="d-flex align-items-center">
-                        <img width="120px" class="img-fluid" src="../assets/img/logo (3).png" alt="">
+                        <img width="120px" class="img-fluid" src="../../assets/img/logo (3).png" alt="">
                         <span class="h3 m-0">SELECT</span>
                     </div>
                 </a>
@@ -25,17 +25,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto me-auto">
-                        <a class="nav-item nav-link fw-bold" href="../index.html">Home</a>
+                        <a class="nav-item nav-link fw-bold" href="../../index.html">Home</a>
                         <a class="nav-item nav-link fw-bold" href="#">Suporte</a>
                         <a class="nav-item nav-link fw-bold" href="#">Sobre nos</a>
-                        <a class="nav-item nav-link fw-bold" href="../cursos/">Cursos</a>
+                        <a class="nav-item nav-link fw-bold" href="../../cursos/">Cursos</a>
                         <a class="nav-item nav-link fw-bold" href="#">Contato</a>
                     </div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="ms-auto">
-                        <a href="../login/" class="btn button-transparent fw-bold">login</a>
-                        <a href="../cadastro/" class="btn button-black fw-bold">cadastro</a>
+                        <a href="../../login/" class="btn button-transparent fw-bold">login</a>
+                        <a href="../../cadastro/" class="btn button-black fw-bold">cadastro</a>
                     </div>
                 </div>
             </div>
@@ -43,102 +43,160 @@
     </header>
 
     <main>
-        <!-- BLOCO 1 -->
-        <section name="agenda-bloco1" id="agenda-bloco1"></section>
-
-
-        <!-- BLOCO 2 -->
-        <section name="agenda-bloco2" id="agenda-bloco2">
-            <div class="text-center mt-5 mb-2">
-                <h5 class="text-secondary">Especialistas encontrados</h5>
-            </div>
-            <div id="agenda-background" class="d-flex flex-column gap-5 py-5">
+        <div id="psicologo-background" class="d-flex flex-column gap-5 pt-5">
+            <!-- BLOCO 1 -->
+            <section name="psicologo-bloco1" id="psicologo-bloco1">
                 <div class="bg-white py-3">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-6 col-sm-12 d-flex align-items-center justify-content-center">
-                                <img width="80%" class="rounded" src="../assets/img/miguel.jpeg" alt="">
-                            </div>
-                            <div class="col-lg-6 col-sm-12 d-flex align-items-center">
-                                <div>
-                                    <h3>Miguel Paduan Antonio</h3>
-                                    <div class="my-3">
-                                        <div>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
-                                        </div>
-                                        <div>
-                                            <span class="text-secondary fw-bold">130.00/ hora</span>
-                                        </div>
-                                    </div>
-                                    <p class="text-secondary">As sessões online oferecem a comodidade de poder receber apoio terapêutico no conforto de sua própria casa, eliminando a necessidade de deslocamentos. Através de videochamadas seguras e confidenciais, estou disponível para ouvir suas preocupações, fornecer insights, oferecer estratégias de enfrentamento e auxiliá-lo(a) no desenvolvimento de habilidades emocionais e de resolução de problemas.</p>
-                                    <a href="./miguel-paduan-antonio/" class="btn button-black mt-3 fw-bold">Ver perfil</a>
+                            <div class="col-lg-6 col-sm-12">
+                                <div class="p-3 position-absolute">
+                                    <a href="../index.html" class="btn button-black">
+                                        <i class="bi bi-chevron-left"></i>
+                                    </a>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-white py-3">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-6 col-sm-12 d-flex align-items-center justify-content-center">
-                                <img width="80%" class="rounded" src="../assets/img/julia.jpeg" alt="">
-                            </div>
-                            <div class="col-lg-6 col-sm-12 d-flex align-items-center">
-                                <div>
-                                    <h3>julia Oliveira Santos</h3>
-                                    <div class="my-3">
-                                        <div>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
-                                        </div>
-                                        <div>
-                                            <span class="text-secondary fw-bold">130.00/ hora</span>
-                                        </div>
-                                    </div>
-                                    <p class="text-secondary">As sessões online oferecem a comodidade de poder receber apoio terapêutico no conforto de sua própria casa, eliminando a necessidade de deslocamentos. Através de videochamadas seguras e confidenciais, estou disponível para ouvir suas preocupações, fornecer insights, oferecer estratégias de enfrentamento e auxiliá-lo(a) no desenvolvimento de habilidades emocionais e de resolução de problemas.</p>
-                                    <a href="./julia-oliveira-santos/" class="btn button-black mt-3 fw-bold">Ver perfil</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-white py-3">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-6 col-sm-12 d-flex align-items-center justify-content-center">
-                                <img width="80%" class="rounded" src="../assets/img/antonio.jpeg" alt="">
+                                <img width="100%" class="rounded" src="../../assets/img/antonio.jpeg" alt="">
                             </div>
                             <div class="col-lg-6 col-sm-12 d-flex align-items-center">
                                 <div>
                                     <h3>Antonio Jose Bezerra</h3>
                                     <div class="my-3">
-                                        <div>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
-                                        </div>
-                                        <div>
-                                            <span class="text-secondary fw-bold">130.00/ hora</span>
-                                        </div>
+                                        <span class="fw-bold">Psicólogo</span>
                                     </div>
                                     <p class="text-secondary">As sessões online oferecem a comodidade de poder receber apoio terapêutico no conforto de sua própria casa, eliminando a necessidade de deslocamentos. Através de videochamadas seguras e confidenciais, estou disponível para ouvir suas preocupações, fornecer insights, oferecer estratégias de enfrentamento e auxiliá-lo(a) no desenvolvimento de habilidades emocionais e de resolução de problemas.</p>
-                                    <a href="./antonio-jose-bezerra/" class="btn button-black mt-3 fw-bold">Ver perfil</a>
+                                    <a href="https://wa.me/+5587991156513" class="btn button-green mt-3 fw-bold">
+                                        <i class="bi bi-whatsapp pe-2"></i>
+                                        Conversar
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </section>
+
+
+            <!-- BLOCO 2 -->
+            <section name="psicologo-bloco2" id="psicologo-bloco2">
+                <div class="bg-white py-3">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-12 d-flex align-items-center">
+                                <div>
+                                    <h3 class="mb-5">Horários <span class="text-orange">disponiveis.</span></h3>
+                                    <ul id="lista-horarios">
+                                        <li class="p-3 first">
+                                            <p class="m-0 text-orange">Horários</p>
+                                        </li>
+                                        <li class="p-3">
+                                            <p class="m-0">Terça-feira: 08:00 às 22:00;</p>
+                                        </li>
+                                        <li class="p-3">
+                                            <p class="m-0">Qurta-feira: 08:00 às 22:00;</p>
+                                        </li>
+                                        <li class="p-3">
+                                            <p class="m-0">Quinta-feira: 08:00 às 22:00;</p>
+                                        </li>
+                                        <li class="p-3">
+                                            <p class="m-0">Sexta-feira: 08:00 às 22:00;</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-sm-12"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+            <!-- BLOCO 3 -->
+            <section name="psicologo-bloco3" id="psicologo-bloco3">
+                <div class="bg-white py-3">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-12">
+                                <img width="100%" class="rounded" src="../../assets/img/sobre-mim-img-1.jpeg" alt="">
+                            </div>
+                            <div class="col-lg-6 col-sm-12 d-flex align-items-center">
+                                <div>
+                                    <h3>Sobre mim</h3>
+                                    <div class="my-3">
+                                        <span class="fw-bold">Psicólogo</span>
+                                    </div>
+                                    <p class="text-secondary">As sessões online oferecem a comodidade de poder receber apoio terapêutico no conforto de sua própria casa, eliminando a necessidade de deslocamentos. Através de videochamadas seguras e confidenciais, estou disponível para ouvir suas preocupações, fornecer insights, oferecer estratégias de enfrentamento e auxiliá-lo(a) no desenvolvimento de habilidades emocionais e de resolução de problemas.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div>
+                <!-- BLOCO 4 -->
+                <section name="psicologo-bloco4" id="psicologo-bloco4">
+                    <div class="bg-white py-3">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-6 col-sm-12 d-flex align-items-center">
+                                    <div>
+                                        <h3 class="mb-5">Formação<span class="text-orange">.</span></h3>
+                                        <p class="text-secondary ps-5 my-0">Graduação Psicologia (Conclusão em 2006)</p>
+                                        <p class="text-secondary ps-5 my-0">Especialização Gestalt-Terapia (Conclusão em 2012)</p>
+                                        <p class="text-secondary ps-5 my-0">Pós graduação Neuropsicologia (Conclusão em 2019)</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-sm-12"></div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+
+                <!-- BLOCO 5 -->
+                <section name="psicologo-bloco5" id="psicologo-bloco5">
+                    <div class="bg-white py-3">
+                        <div class="container">
+                            <div class="text-center">
+                                <h3 class="mb-5">Serviços<span class="text-orange">.</span></h3>
+                            </div>
+                            <div class="row mb-5 gy-4">
+                                <div class="col-lg-4 col-sm-12">
+                                    <div class="p-4 card">
+                                        <div class="card-content">
+                                            <h5 class="mt-2 mb-4">Clinica</h5>
+                                            <p class="text-secondary">
+                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque aliquid excepturi doloribus enim asperiores sunt accusantium ipsa, vero modi eius unde perferendis provident doloremque repudiandae corporis ea expedita. Quod, voluptate?
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-sm-12">
+                                    <div class="p-4 card">
+                                        <div class="card-content">
+                                            <h5 class="mt-2 mb-4">Online</h5>
+                                            <p class="text-secondary">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ratione, nemo aspernatur vitae assumenda atque tenetur libero. Commodi cupiditate inventore amet modi molestiae quaerat quas tempore, atque ipsa deleniti pariatur.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-sm-12">
+                                    <div class="p-4 card">
+                                        <div class="card-content">
+                                            <h5 class="mt-2 mb-4">Empresa</h5>
+                                            <p class="text-secondary">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum perferendis blanditiis inventore reiciendis suscipit amet, pariatur magnam itaque. Obcaecati sapiente odit mollitia aspernatur temporibus est placeat quia iusto rem ea!
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
-        </section>
+        </div>
     </main>
 
 
