--- a/frontend/cursos/index.html
+++ b/frontend/cursos/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- CABEÇALHO -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">
                     <div id="logo" class="d-flex align-items-center">
@@ -67,7 +67,7 @@
                                 <p class="text-secondary text-center">Curso relacionado a Sáude mental</p>
                             </div>
                             <div class="d-flex justify-content-center">
-                                <a href="./saude-mental" class="btn button-orange">Ver mais</a>
+                                <a href="./saude-mental" class="btn button-orange fw-bold">Ver mais</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                                 <p class="text-secondary text-center">Curso relacionado a Relacionamentos</p>
                             </div>
                             <div class="d-flex justify-content-center">
-                                <a href="./relacionamentos" class="btn button-orange">Ver mais</a>
+                                <a href="./relacionamentos" class="btn button-orange fw-bold">Ver mais</a>
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                 <p class="text-secondary text-center">Curso relacionado ao Manuseamento do Tempo</p>
                             </div>
                             <div class="d-flex justify-content-center">
-                                <a href="./manuseamento-do-tempo" class="btn button-orange">Ver mais</a>
+                                <a href="./manuseamento-do-tempo" class="btn button-orange fw-bold">Ver mais</a>
                             </div>
                         </div>
                     </div>
