--- a/frontend/cursos/manuseamento-do-tempo/index.html
+++ b/frontend/cursos/manuseamento-do-tempo/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- CABEÇALHO -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="../../index.html">
                     <div id="logo" class="d-flex align-items-center">
