--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,7 +116,7 @@
             </div>
             <div id="cards-background">
                 <div class="container">
-                    <div class="row p-5">
+                    <div class="row p-5 gy-4">
                         <div class="col-lg-4 col-sm-12">
                             <div class="bg-white p-4">
                                 <div class="card-content">
@@ -127,7 +127,7 @@
                                     </div>
                                     <p>Sou Psicólogo Clínico Terapeuta Cognitivo Comportamental. Eu o auxiliarei a ressignificar suas crenças nucleares disfuncionais e a desenvolver cognições adaptativas acerca de si próprio.</p>
                                 </div>
-                                <a href="./agenda/miguel-paduan-antonio/" class="btn button-black-outline fw-bold">Ver mais</a>
+                                <a href="./agenda/miguel-paduan-antonio/" class="btn button-black-outline fw-bold w-100">Ver mais</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-12">
@@ -140,7 +140,7 @@
                                     </div>
                                     <p>Olá! Sou a psicóloga Julia Oliveira Santos e estou aqui para oferecer meu suporte emocional e ajuda psicológica online. Com vasta experiência na área, estou comprometida em fornecer</p>
                                 </div>
-                                <a href="./agenda/julia-oliveira-santos/" class="btn button-black-outline fw-bold">Ver mais</a>
+                                <a href="./agenda/julia-oliveira-santos/" class="btn button-black-outline fw-bold w-100">Ver mais</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-12">
@@ -153,7 +153,7 @@
                                     </div>
                                     <p>Minha abordagem terapêutica é baseada em uma visão integrativa, combinando diferentes técnicas e teorias da psicologia, adaptadas às necessidades individuais de cada cliente.</p>
                                 </div>
-                                <a href="./agenda/antonio-jose-bezerra/" class="btn button-black-outline fw-bold">Ver mais</a>
+                                <a href="./agenda/antonio-jose-bezerra/" class="btn button-black-outline fw-bold w-100">Ver mais</a>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
     <!-- RODAPÉ -->
     <footer>
         <div class="container">
-            <div class="row p-5">
+            <div class="row p-5 gy-4">
                 <div class="col-lg-3 col-sm-12">
                     <h4 class="text-white mb-4">SELECT</h4>
                     <div class="my-2">
