--- a/frontend/agenda/julia-oliveira-santos/index.html
+++ b/frontend/agenda/julia-oliveira-santos/index.html
@@ -203,7 +203,7 @@
     <!-- RODAPÉ -->
     <footer>
         <div class="container">
-            <div class="row p-5">
+            <div class="row p-5 gy-4">
                 <div class="col-lg-3 col-sm-12">
                     <h4 class="text-white mb-4">SELECT</h4>
                     <div class="my-2">
