--- a/frontend/cadastro/index.html
+++ b/frontend/cadastro/index.html
@@ -20,65 +20,67 @@
                             <div class="col-lg-7 col-sm-12 d-flex align-items-center">
                                 <div class="w-100 p-5">
                                     <div>
-                                        <a href="../index.html" class="text-decoration-none return"><i class="bi bi-chevron-left"></i> Voltar</a>
+                                        <a href="../index.html" class="text-decoration-none fw-bold text-orange"><i class="bi bi-chevron-left"></i> Voltar</a>
                                     </div>
                                     <div class="d-flex justify-content-center mb-5">
-                                        <h1 class="title">Login</h1>
+                                        <h1 class="title">Cadastro</h1>
                                     </div>
-                                    <div class="my-4">
-                                        <label for="nome">Nome completo</label>
-                                        <input id="nome" name="nome" type="text" placeholder="Digite seu nome" class="form-control">
-                                    </div>
-                                    <div class="my-4">
-                                        <label for="email">E-mail</label>
-                                        <input id="email" name="email" type="text" placeholder="Digite seu e-mail" class="form-control">
-                                    </div>
-                                    <div class="my-4">
-                                        <label for="pass">Senha</label>
-                                        <div class="input-group">
-                                            <input id="pass" name="pass" type="password" placeholder="Digite sua senha" class="form-control">
-                                            <div class="input-group-append">
-                                                <button class="btn btn-outline-secondary">
-                                                    <i class="bi bi-eye"></i>
-                                                </button>
+                                    <form id="submit-form" method="post">
+                                        <div class="my-4">
+                                            <label for="nome">Nome completo</label>
+                                            <input id="nome" name="nome" type="text" placeholder="Digite seu nome" class="form-control">
+                                        </div>
+                                        <div class="my-4">
+                                            <label for="email">E-mail</label>
+                                            <input id="email" name="email" type="text" placeholder="Digite seu e-mail" class="form-control">
+                                        </div>
+                                        <div class="my-4">
+                                            <label for="password">Senha</label>
+                                            <div class="input-group">
+                                                <input id="password" name="password" type="password" placeholder="Digite sua senha" class="form-control">
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="bi bi-eye"></i>
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="my-4">
-                                        <label for="pass-confirm">Confirmar senha</label>
-                                        <div class="input-group">
-                                            <input id="pass-confirm" name="pass-confirm" type="password" placeholder="Digite a senha novamente" class="form-control">
-                                            <div class="input-group-append">
-                                                <button class="btn btn-outline-secondary">
-                                                    <i class="bi bi-eye"></i>
-                                                </button>
+                                        <div class="my-4">
+                                            <label for="password-confirm">Confirmar senha</label>
+                                            <div class="input-group">
+                                                <input id="password-confirm" name="password-confirm" type="password" placeholder="Digite a senha novamente" class="form-control">
+                                                <div class="input-group-append">
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="bi bi-eye"></i>
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="my-4">
-                                        <label for="data">Data de nascimento</label>
-                                        <input id="data" name="data" type="date" class="form-control">
-                                    </div>
-                                    <div class="my-4">
-                                        <label for="data">Genero:</label>
-                                        <div class="d-flex gap-3">
-                                            <div>
-                                                <input type="radio" id="masculino" name="masculino" value="masculino">
-                                                <label for="masculino">Masculino</label><br>
-                                            </div>
-                                            <div>
-                                                <input type="radio" id="feminino" name="feminino" value="feminino">
-                                                <label for="feminino">Feminino</label><br>
-                                            </div>
-                                            <div>
-                                                <input type="radio" id="outro" name="outro" value="outro">
-                                                <label for="outro">Outro</label>
+                                        <div class="my-4">
+                                            <label for="data">Data de nascimento</label>
+                                            <input id="data" name="data" type="date" class="form-control">
+                                        </div>
+                                        <div class="my-4">
+                                            <label for="data">Genero:</label>
+                                            <div class="d-flex gap-3">
+                                                <div>
+                                                    <input type="radio" id="masculino" name="genero" value="masculino">
+                                                    <label for="masculino">Masculino</label><br>
+                                                </div>
+                                                <div>
+                                                    <input type="radio" id="feminino" name="genero" value="feminino">
+                                                    <label for="feminino">Feminino</label><br>
+                                                </div>
+                                                <div>
+                                                    <input type="radio" id="outro" name="genero" value="outro">
+                                                    <label for="outro">Outro</label>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="d-flex justify-content-end my-3">
-                                        <button class="btn button-orange">Entrar</button>
-                                    </div>
+                                        <div class="d-flex justify-content-end my-3">
+                                            <button type="submit" class="btn button-orange">Cadastrar</button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                             <div class="col-lg-5 col-sm-0 col-img"></div>
@@ -89,5 +91,6 @@
         </section>
     </main>
 
+    <script src="../assets/js/submit.js"></script>
 </body>
 </html>
