--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -21,7 +21,7 @@
                             <div class="col-lg-6 col-sm-12 d-flex align-items-center">
                                 <div class="w-100 p-5">
                                     <div>
-                                        <a href="../index.html" class="text-decoration-none return"><i class="bi bi-chevron-left"></i> Voltar</a>
+                                        <a href="../index.html" class="text-decoration-none fw-bold text-orange"><i class="bi bi-chevron-left"></i> Voltar</a>
                                     </div>
                                     <div class="d-flex justify-content-center mb-5">
                                         <h1 class="title">Login</h1>
@@ -31,9 +31,9 @@
                                         <input id="email" name="email" type="text" placeholder="Digite seu e-mail" class="form-control">
                                     </div>
                                     <div class="my-4">
-                                        <label for="pass">Senha</label>
+                                        <label for="password">Senha</label>
                                         <div class="input-group">
-                                            <input id="pass" name="pass" type="password" placeholder="Digite sua senha" class="form-control">
+                                            <input id="password" name="password" type="password" placeholder="Digite sua senha" class="form-control">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-secondary">
                                                     <i class="bi bi-eye"></i>
