integração backend: delete account

--- a/frontend/cadastro/index.html
+++ b/frontend/cadastro/index.html
@@ -39,8 +39,8 @@
                                             <div class="input-group">
                                                 <input id="password" name="password" type="password" placeholder="Digite sua senha" class="form-control">
                                                 <div class="input-group-append">
-                                                    <button class="btn btn-outline-secondary">
-                                                        <i class="bi bi-eye"></i>
+                                                    <button type="button" id="show-password" class="btn btn-outline-secondary">
+                                                        <i id="show-password-icon" class="bi bi-eye"></i>
                                                     </button>
                                                 </div>
                                             </div>
@@ -50,8 +50,8 @@
                                             <div class="input-group">
                                                 <input id="password-confirm" name="password-confirm" type="password" placeholder="Digite a senha novamente" class="form-control">
                                                 <div class="input-group-append">
-                                                    <button class="btn btn-outline-secondary">
-                                                        <i class="bi bi-eye"></i>
+                                                    <button type="button" id="show-password-confirm" class="btn btn-outline-secondary">
+                                                        <i id="show-password-confirm-icon" class="bi bi-eye"></i>
                                                     </button>
                                                 </div>
                                             </div>
@@ -92,5 +92,6 @@
     </main>
 
     <script src="../assets/js/submit.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
