--- a/frontend/cursos/relacionamentos/index.html
+++ b/frontend/cursos/relacionamentos/index.html
@@ -20,7 +20,7 @@
                         <span class="h3 m-0">SELECT</span>
                     </div>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -34,8 +34,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="ms-auto">
-                        <a href="../../login/" class="btn button-transparent fw-bold">Login</a>
-                        <a href="../../cadastro/" class="btn button-black fw-bold">Cadastro</a>
+                        <a href="../../perfil/">
+                            <img class="rounded-circle img-perfil" width="45px" height="45px" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -255,5 +256,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="../../assets/js/verifyLogin.js"></script>
+    <script src="../../assets/js/bootstrap.min.js"></script>
 </body>
 </html>
