--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
                         <span class="h3 m-0">SELECT</span>
                     </div>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -32,9 +32,14 @@
                     </div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="ms-auto">
+                    <div id="nav-not-loged" class="ms-auto">
                         <a href="./login/" class="btn button-transparent fw-bold">login</a>
                         <a href="./cadastro/" class="btn button-black fw-bold">cadastro</a>
+                    </div>
+                    <div id="nav-loged" class="ms-auto">
+                        <a href="./perfil/">
+                            <img class="rounded-circle img-perfil" width="45px" height="45px" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -53,7 +58,7 @@
                             <a href="./agenda/" class="btn button-orange fw-bold">Agenda</a>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-12">
+                    <div class="col-lg-6 col-sm-12 col-img d-flex align-items-end">
                         <img class="w-100" src="./assets/img/pessoas-transformed.png" alt="">
                     </div>
                 </div>
@@ -242,5 +247,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="./assets/js/headerLoged.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
 </body>
 </html>
