--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -36,8 +36,8 @@
                                             <div class="input-group">
                                                 <input id="password" name="password" type="password" placeholder="Digite sua senha" class="form-control">
                                                 <div class="input-group-append">
-                                                    <button class="btn btn-outline-secondary">
-                                                        <i class="bi bi-eye"></i>
+                                                    <button type="button" id="show-password" class="btn btn-outline-secondary">
+                                                        <i id="show-password-icon" class="bi bi-eye"></i>
                                                     </button>
                                                 </div>
                                             </div>
@@ -56,5 +56,6 @@
     </main>
 
     <script src="../assets/js/login.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
